# tim

./: .gitignore  README.md  conftest.py  lint  pyproject.toml
.tim/agent-logs/: 2026-06-13T11-10-48.041454-80460.jsonl  2026-06-13T11-12-48.122330-80523.jsonl  2026-06-13T11-13-14.499054-80536.jsonl  2026-06-13T11-13-19.848203-80539.jsonl  2026-06-13T11-13-49.691674-80560.jsonl  2026-06-13T11-14-25.072475-80574.jsonl  2026-06-13T11-14-55.147035-80591.jsonl  2026-06-13T11-15-20.113532-80618.jsonl  2026-06-13T11-20-48.202716-80736.jsonl  2026-06-13T11-22-03.099217-80781.jsonl  2026-06-14T10-48-56.946073-84429.jsonl  2026-06-14T10-52-21.048494-84445.jsonl  2026-06-14T11-28-11.700378-84961.html  2026-06-14T11-28-11.700378-84961.jsonl  2026-06-14T12-18-23.032771-85809.html  2026-06-14T12-18-23.032771-85809.jsonl  2026-06-14T12-39-21.879174-86201.jsonl  2026-06-14T13-22-26.860546-86887.jsonl  2026-06-14T13-44-53.433999-87522.jsonl  2026-06-14T13-46-27.364959-87573.jsonl  2026-06-14T14-36-05.731040-88508.jsonl  2026-06-14T17-23-18.487444-89683.jsonl  2026-06-14T17-32-28.676476-89836.jsonl  2026-06-14T17-43-01.322662-89994.jsonl  2026-06-14T17-52-42.637672-90311.jsonl  2026-06-14T18-14-22.010356-90950.jsonl  2026-06-14T18-16-30.133563-91000.jsonl  2026-06-14T21-20-06.749134-91885.jsonl  2026-06-14T21-31-35.357624-92041.jsonl  2026-06-14T21-32-47.299969-92059.jsonl  2026-06-14T21-35-45.336460-92147.jsonl  2026-06-14T22-13-30.433762-97789.jsonl  2026-06-14T22-26-55.183171-98145.jsonl  2026-06-14T23-26-31.105332-3019.jsonl  2026-06-15T20-46-22.670798-6149.jsonl
.tims/: createcli.py  newsubcommand.py
eval-projects/jsonprinter/: cli.py  main.py  pyproject.toml  sample.json
eval-projects/jsonprinter/tests/: test_cli.py
eval-projects/llmmetrics/: README.md  lint  main.py  pyproject.toml  test_llmmetrics.py  test_main.py
eval-projects/llmmetrics/static/: index.html
tim/: __init__.py  agent.py  agentmessage.py  applychange.py  change.py  change_test.py  cli.py  cliagent.py  cliagent_eval.py  cliagent_test.py  codechange.py  codingagent.py  codingagent_eval.py  codingagent_test.py  logviewer.py  project.py  project_test.py  tools.py  tools_test.py
