[project]
name = "tim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
]

[project.scripts]
tim = "tim.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120

[tool.uv]
package = true
