[project]
name = "tim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "openai>=2.40.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
tim = "tim.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120

[tool.uv]
package = true
exclude-newer = "1 week"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_eval.py"]
norecursedirs = ["eval-projects"]
