[project]
name = "jsonprinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
]

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
