[project]
name = "llmmetrics"
version = "0.1.0"
description = "A small dashboard for llama-server metrics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.uv]
exclude-newer = "1 week"
